# Craft-your-IC-assembler

./: .gitignore  .merlin  LICENSE  Makefile  README.md  assembler  assembler.ml  ast.ml  dune  dune-project  handling.ml  hyper.ml  lexer.mll  linker.ml  opcodes.ml  parser.mly  printer.ml  vriscvasm.opam
examples/: clock.s  fibo.s  mult.s  six_over_pi_squared.s  testScreen.s
rom/: 01_alternating.rom  01_binary.rom  01_clock.rom  01_count.rom  01_counter.rom  01_empty.rom  01_full.rom  01_testScreen.rom  02_alternating.rom  02_binary.rom  02_clock.rom  02_count.rom  02_counter.rom  02_empty.rom  02_full.rom  02_testScreen.rom  03_alternating.rom  03_binary.rom  03_clock.rom  03_count.rom  03_counter.rom  03_empty.rom  03_full.rom  03_testScreen.rom  04_alternating.rom  04_binary.rom  04_clock.rom  04_count.rom  04_counter.rom  04_empty.rom  04_full.rom  04_testScreen.rom  05_alternating.rom  05_binary.rom  05_clock.rom  05_count.rom  05_counter.rom  05_empty.rom  05_full.rom  05_testScreen.rom  (+88 more)
src/: assembler.ml  ast.ml  dune  dune-project  handling.ml  hyper.ml  lexer.mll  linker.ml  parser.mly  printer.ml  simulator.ml
